Fix text jumping when loader is shown

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -71,7 +71,8 @@ body {
 }
 
 .loader-container {
-  margin-top: 80px;
+  height: 105px;
+  padding-top: 45px;
 }
 
 .loader {
